--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -204,6 +204,7 @@ However, simple proxy voting, where proxies cannot transfer their voting power,
 is sufficient for the research performed in this paper.
 % TODO: Rewrite here and below
 
+
 \section{Related Work}\label{sec:related-work}
 James Miller~\cite{Miller1969} proposed using proxy voting as a more direct
 method of democracy rather than representative democracy.
@@ -237,12 +238,57 @@ Under the mean mechanism, discussed in \autoref{para:mean}, if everyone were to 
 we would get the actual preference of the system, $\systemtruth = 0.1875$.
 However, if $\agent_2$ and $\agent_3$ were to become inactive and select $\agent_4$ as
 their proxy, making them a super voter, the result would be $\systemtruth = 0.5$.
+This is visualized in \autoref{fig:voting-example}.
 This is an absolute error of 0.3125, or 15.625\% of the entire preference space!
 While $\agent_4$ would certainly be the preferred proxy, if $\agent_2$ were to
 instead strategically delegate their vote to $\agent_1$, the result would
 be $\systemtruth = 0$, which is closer to the actual preference.
 However, without knowing to whom $\agent_3$ is delegating their vote, or even if he
 will, $\agent_2$ has no reason to be strategic.
+
+\begin{figure}[htbp]
+    \centering
+    % Built using:
+    % https://tex.stackexchange.com/a/148253/277236
+    % https://tex.stackexchange.com/a/380491/277236
+    \begin{tikzpicture}[scale=7.0]
+        \draw(-1,0) -- (1,0) ; % Axis
+        \foreach \x in {-1, 0, 1} % Numbers and lower lines
+        \draw[shift={(\x,0)},color=black] (0pt,0pt) -- (0pt,-2pt) node[below]{$\x$};
+
+        % Labeled points
+        \tkzDefPoint(-1, 0){agent1}
+        \tkzDefPoint(0.25, 0){agent2}
+        \tkzDefPoint(0.5, 0){agent3}
+        \tkzDefPoint(1, 0){agent4}
+        \tkzLabelPoint[above](agent1){$\truthof{\agent_1}$}
+        \tkzLabelPoint[above](agent2){$\truthof{\agent_2}$}
+        \tkzLabelPoint[above](agent3){$\truthof{\agent_3}$}
+        \tkzLabelPoint[above](agent4){$\truthof{\agent_4}$}
+
+        \foreach \n in {agent1, agent2, agent3, agent4}
+        \node at (\n)[circle,fill,inner sep=1.75pt]{};
+
+
+        % Actual preference
+        \draw[color=blue, line width=0.5mm, dotted]
+        (0.1875, 4pt) -- (0.1875, -3pt);
+        \node[color=blue] at (0.1875,-4pt) {$\systemtruth_{actual}$};
+
+        % Preference under proxy vote
+        \draw[color=orange, line width=0.5mm, dotted]
+        (0.5, 4pt) -- (0.5, -3pt);
+        \node[color=orange] at (0.5,-4pt) {$\systemtruth_{proxy}$};
+    \end{tikzpicture}
+
+    \caption{
+        An example vote and its results.
+        $\systemtruth_{actual}$ is the result when everyone votes,
+        and $\systemtruth_{proxy}$ is when $\agent_2$ and $\agent_3$ delegate their
+        vote and make $\agent_4$ a super voter.
+    }
+    \label{fig:voting-example}
+\end{figure}
 
 % TODO: While the above might seem a contrived example, \etal{Cohensius}. . .
 
