--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -229,8 +229,9 @@ However, proxy voting is not without its flaws.
 \etal{Kling} investigated a weakness in liquid democracy dubbed `super voters'
 ~\cite[para.~1.3]{Kling2015}, which are proxies that receive an extremely large
 amount of power, while others gain very little.
-While they determined these proxies tend to use their power wisely, there can be
-situations where they can be problematic.
+While they determined these proxies tend to use their power wisely, possible to avoid
+estranging those voters who delegate their power to the proxy, there can be
+situations where they can be problematic with one-off issues.
 As a simple example, consider a vote taking over preference
 space $\systemspace = [-1, 1]$ with agent preferences $\truthof{\agent_1} = -1$,
 $\truthof{\agent_2} = 0.25$, $\truthof{\agent_3} = 0.5$, $\truthof{\agent_4} = 1$,
