--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -297,42 +297,31 @@ if they will, $\agent_5$ has no reason to be strategic.
 
 
 \section{Contribution}\label{sec:contribution}
-This study aims to explore the idea of using proxy voting as a technique to remove the
-need to take expensive, dangerous, or otherwise undesirable but more accurate
-measurements by employing more desirable but less accurate gauging methods when they
-are available.
-This is accomplished by first taking a number of measurements to serve as proxies, then
-supplementing any lack of precision by allocating votes from other measurement
-techniques.
-\com{This makes total sense to me, in not employing sensors if they appear not to be
-needed.
-If all the cheap sensors agree, is there really any point in employing an expensive
-sensors.
-But is this really proxy voting? It seems more like "not voting", as the expensive
-sensor has no opinion.}
-Additionally, this paper experiments with using different voting mechanisms and
-weighting mechanisms in an attempt to optimize proxy voting for different
-distributions of error.
-This paper also determines if using such mechanisms are even worthwhile, or if it
-would be better to skip the proxy voting and simply allow each measurement contribute
-to the truth directly.
-Finally, this paper attempts to identify how many `proxy' measurements need
-to be taken to reduce cost while still ensuring accuracy.
+This study aims to explore the use of proxy voting for Congress.
+We examine how much of an effect proxy voting has on the outcome of a vote under a
+number of distributions of opinions, as well as with various numbers of inactive
+agents.
+Additionally, this paper experiments with using different voting mechanisms in order
+to determine if these proxy votes should be handled differently from normal voting.
+Finally, this paper will watch for the prevalence of super voters and attempt to
+assess any effect, beneficial or harmful, they have on the system.
 
-This paper will show that, while proxy vote systems are not a perfect tool to
-increase a system's accuracy, they may be beneficial when the distribution of error
-from a measurement is asymmetrical.
-Additionally, this paper will identify the best performing voting and weighting
-mechanisms, as well as discuss an ideal range of proxy and inactive agents to be used
-in such a system.
+% TODO: Fill out synopsis of what is learned after the data is analysed
+% This paper will show that, while proxy vote systems are not a perfect tool to
+% increase a system's accuracy, they may be beneficial when the distribution of error
+% from a measurement is asymmetrical.
+% Additionally, this paper will identify the best performing voting and weighting
+% mechanisms, as well as discuss an ideal range of proxy and inactive agents to be used
+% in such a system.
 
-
-\section{Potential Applications}\label{sec:potential-applications}
-Proxy vote systems can be used in situations where highly accurate measurements are
-difficult, costly, or time-consuming, and cheaper or easier alternatives are available.
-While this study will show they will not work in all situations, they do have a
-potential use when one of the alternative measurements tends to yield an asymmetrical
-distribution of error.
-
-These systems may also have use in ensemble machine learning techniques, though this
-idea is not explored in this study.
+% TODO: Maybe combine this section with "Contribution," explaining how we hope to be
+%   able to apply what's learned here to actual scenarios?
+% \section{Potential Applications}\label{sec:potential-applications}
+% Proxy vote systems can be used in situations where highly accurate measurements are
+% difficult, costly, or time-consuming, and cheaper or easier alternatives are available.
+% While this study will show they will not work in all situations, they do have a
+% potential use when one of the alternative measurements tends to yield an asymmetrical
+% distribution of error.
+%
+% These systems may also have use in ensemble machine learning techniques, though this
+% idea is not explored in this study.
