--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -49,8 +49,9 @@ is reasonable.
 Second, we assume that each voter has perfect knowledge of potential proxies' opinions.
 This will allow them to choose the proxy that has the most similar opinion to their own.
 While in reality voters will likely not have perfect knowledge of others' opinions,
-it is often not too hard to gauge the opinion of others, particularly those with whom
-an individual often associates, and so we believe this assumption is reasonable.
+it is often not particularly difficult to gauge the opinion of others, especially
+those with whom an individual often associates, and so we believe this assumption is
+reasonable.
 
 Finally, we assume that there are no factors besides closeness in opinion that affect
 the choice of proxy.
@@ -107,8 +108,8 @@ This model also naturally extends to two- or higher-dimensional spaces, such as
 the opinions of a congress member on multiple topics.
 However, as previously mentioned, we will only consider the idealistic
 situation where a congress member can choose their proxy for each topic individually.
-The model also allows for votes on topics that are not binary, such setting the
-budget for the year;
+The model also allows for votes on topics that are not binary, such as setting the
+budget for the year:
 instead of simply voting yes or no on some pre-chosen budget, the output of the system
 can serve as the budget.
 
@@ -164,7 +165,7 @@ The most obvious advantage is that it allows inactive voters to reduce the work
 required of them by choosing a proxy to perform the work of voting for them.
 Naturally, this is extremely useful when the cost of voting is high, such as
 when remaining educated on a topic is difficult or
-time-consuming~\cite{Mueller1972} uncomfortable work such as standing in
+time-consuming~\cite{Mueller1972}, uncomfortable work such as standing in
 long queues is required, or other frustrating or costly obstacles must be overcome.
 For our purposes it is likely undesirable that the agents, being members of Congress,
 do not pay the cost of remaining educated, but proxy voting can still be beneficial
