--- a/content/frontmatter/abstract.tex
+++ b/content/frontmatter/abstract.tex
@@ -6,40 +6,34 @@
 % is indented properly. Max 350 words.
 
     % TODO: Rewrite
-    A proxy voting system is a system in which agents are able to give their vote to
-    other agents, known as proxies.
-    These proxies vote on behalf of the agents who gave up their vote.
-    The idea behind this type of voting system is to allow agents without the time
-    %
-    \com{Still seems to rely on earlier formulation of the problem. We need a
-    situation where voters have a meaningful opinion but are unable to vote. When you
-    had to actually go to the polls, it wasn't uncommon for someone to have a
-    meaningful opinion but be unable/unwilling to vote. If we could replicate that
-    situation where they are able to select a proxy voter, we could justify our study.}
-    %
-    or knowledge necessary to properly become informed on a topic to become
-    inactive and pass their vote to a proxy that does.
-    The hope is this proxy will be an expert on the topic and therefore will yield a
-    more informed end decision.
-    This study investigates the ability of a proposed system to be used as a way to
-    replace expensive, but highly accurate, measurements with less expensive,
-    though less accurate, measurements through the use of proxy voting by exploiting
-    this proxy-inactive agent relationship.
-    %
-    \com{
-        Here's another idea. In the House, people have been voting by proxy because
-        they have health issues and don't want the contact. An article I read said
-        80\% of members had used that option. What if we study how that practice
-        effects voting results? The "truth" is the actual vote if everyone voted. We
-        are seeing how close proxy voting comes.}
-    %
-    Multiple types of voting, dubbed `voting mechanisms,' are developed and tested,
-    as well as several ways to allow inactive agents to divide their votes amongst
-    proxies named `weighting mechanisms.'
-    While it was ultimately discovered that proxy vote systems should not be used in
-    all situations, this study was able to identify potential applications for
-    employing proxy vote systems as well as lay out potential avenues for additional
-    research.
+    In May 2020, the 116th United States Congress passed a resolution to permit the
+    use of proxy voting during emergencies for members of the House of Representatives.
+    Proxy voting is a system of voting where a voter can assign another voter, called
+    a proxy, to vote on their behalf.
+    As with other voting systems, the votes are then aggregated into a final result
+    using a voting rule or mechanism.
+    Ideally, the result of proxy voting would be the same, or as close to as
+    possible, to the result if everyone were to vote.
+    This resolution was almost immediately put into practice and remains active at
+    the time of this study.
+    While it was designed to reduce the transmission of disease such as COVID-19, if
+    proxy voting can be shown to be beneficial the resolution could be expanded to
+    create a more efficient government system.
+    However, proxy voting in Congress has been regarded with some skepticism and the
+    question remains as to if proxy voting has too great of an effect on the result
+    of the vote.
+    In this study, we give proxy voting its best chance and explore its effects on
+    the results of the vote under a number of opinion distributions.
+    We additionally explore how different voting rules affect the results of the vote.
+    We employ an opinion space model and determine the result of a vote as a point in
+    the model space, instead of the vote simply passing or failing, in order to
+    increase the granularity of the results and determine how much error is
+    introduced due to proxy voting.
+    Finally, we attempt to determine under which circumstances proxy voting should be
+    used, if any, and identify strengths and weaknesses of using proxy voting in the
+    modern House of Representatives.
+    % TODO: Put in a bit of what we discover
+
 
 \end{abstract}
 
