--- a/thesis.tex
+++ b/thesis.tex
@@ -102,9 +102,11 @@
 
 % Author and Title Information
 \author{Michael D. Hegerhorst}
-\title{An Exploration into the Use of a Proxy Vote Measurement System to Replace Undesirable Measurements}
+\title{
+    An Exploration into the Use of Proxy Votes in the United States House of
+    Representatives
+}
 
-\newcommand{\blue}[1]{\textcolor{blue}{#1}}
 \newcommand{\vicki}[1]{\textcolor{blue}{Vicki: #1}}
 \newcommand{\com}[1]{\textcolor{brown}{Vicki: #1}}
 % The Committee
