Set up Proposal format

--- a/thesis.tex
+++ b/thesis.tex
@@ -135,25 +135,25 @@
     \makecopyright        % optional
 
     \include{content/frontmatter/abstract}
-    \include{content/frontmatter/publicabstract}
-    \include{content/frontmatter/dedication}  % optional
+    % \include{content/frontmatter/publicabstract}
+    % \include{content/frontmatter/dedication}  % optional
 %    \include{acknowl}     % optional TODO: Do I want acknowledgements?
 
     \tableofcontents
     \listoftables
     \listoffigures
 
-    \include{content/frontmatter/notation}  % optional
+    % \include{content/frontmatter/notation}  % optional
     % \include{content/frontmatter/acronyms}  % optional
     %}}}
     %{{{ The main body of the thesis
     \body  % set main body style
     % Chapters
     \include{content/chapter1-introduction}
-    \include{content/chapter2-experimental-design}
-    \include{content/chapter3-results}
-    \include{content/chapter4-conclusions-and-further-work}
-    \vicki{Need better set of references.  Two are really old.  Do the others recommend proxy voting in a situation such as yours?  You need to compare against other good methods, not just average weighting.}
+    % \include{content/chapter2-experimental-design}
+    % \include{content/chapter3-results}
+    % \include{content/chapter4-conclusions-and-further-work}
+
     % Endmatter
     % For BibTeX references: specify a .bib file and a style.
     % The style used here is for IEEE transactions formatting:
@@ -165,7 +165,7 @@
     % The style used here is for AIAA formatting:
 %    \references{IEEEabrv,sample}{aiaa}
 
-    \include{content/endmatter/appendix}
+    % \include{content/endmatter/appendix}
     
 
 %    \include{vita}  % FIXME: I don't think I actually need this unless I'm a doctorate.
