Made  some minor changes for the proposal

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -136,8 +136,8 @@ also exists in~\systemspace.
 %
 This study employs the use of several common voting mechanisms and adapts them to the
 proxy voting system.
-What these mechanisms are and how they operate are described
-in~\autoref{subsec:voting-mechanisms}.
+What these mechanisms are and how they operate will be described in the full thesis.
+% in~\autoref{subsec:voting-mechanisms}.
 
 This paper will explore how proxy voting affects the vote and under what
 circumstances it can be used by the House without changing the result.
@@ -193,7 +193,9 @@ who want to be inactive to become inactive.
 When operating under the Congress resolution, system welfare can also be enhanced
 through proxy voting by allowing ill members to quarantine and ensure the health
 of other agents.
-As will be discussed in \autoref{ch:results}, this additional system welfare comes at
+As will be discussed in the results section of the thesis,
+% \autoref{ch:results},
+this additional system welfare comes at
 the cost of some system accuracy in terms of the actual preferences of the voters
 since not all information can be restored.
 
@@ -237,7 +239,7 @@ As a simple example, consider a vote taking over preference
 space $\systemspace = [-1, 1]$ with agent preferences $\truthof{\agent_1} = -1$,
 $\truthof{\agent_2} = 0.25$, $\truthof{\agent_3} = 0.5$, $\truthof{\agent_4} = 1$,
 $\truthof{\agent_5} = 0.15$.
-Under the mean mechanism, discussed in \autoref{para:mean}, if everyone were to vote
+Under the mean mechanism, if everyone were to vote
 we would get the actual preference of the system, $\systemtruth = 0.18$.
 However, if $\agent_2$, $\agent_3$, and $\agent_5$ were to become inactive and select
 $\agent_4$ as their proxy, making them a super voter, the result would be
