--- a/content/frontmatter/abstract.tex
+++ b/content/frontmatter/abstract.tex
@@ -17,7 +17,7 @@
     This resolution was almost immediately put into practice and remains active at
     the time of this study.
     While it was designed to reduce the transmission of disease such as COVID-19, if
-    proxy voting can be shown to be beneficial the resolution could be expanded to
+    proxy voting can be shown to be beneficial, the resolution could be expanded to
     create a more efficient government system.
     However, proxy voting in Congress has been regarded with some skepticism and the
     question remains as to if proxy voting has too great of an effect on the result
