Wrote more about first assumption

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -14,8 +14,9 @@ This resolution was passed on May 15th, 2020, and as indicated by proxy designat
 letters sent to the Clerk of the House of Representatives~\cite{Clerk.House.gov2022},
 was put to use as soon as five days later.
 \vicki{Would be good to clarify why they can't just vote remotely.}
-The hope behind the resolution was to allow members of the House of Representatives
-to vote remotely, in order to prevent the spread of COVID-19~\cite{Congress.gov2020}.
+The hope behind the resolution was to allow the House of Representatives
+to vote continue operating while still allowing members to quarantine and
+prevent the spread of COVID-19~\cite{Congress.gov2020}.
 However, the question remains as to what degree proxy voting affects the results of
 the vote.
 In this study, we explore the effects of proxy voting on the results of the vote
@@ -46,6 +47,10 @@ topics are discussed~\cite{Congress.gov2020}.
 However, since it would be fairly simple to implement a new process that allows
 per-topic proxies, and to give proxy voting its best chance we believe this assumption
 is reasonable.
+Additionally, whereas currently the proxies are not general proxies and must vote as
+per specific instructions provided by the delegating
+voter~\cite{CERP2020, Congress.gov2020}, this assumption is not too far off of how
+the system currently works.
 
 Second, we assume that each voter has perfect knowledge of potential proxies' opinions.
 This will allow them to choose the proxy that has the most similar opinion to their own.
