Rewrote final assumption

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -61,11 +61,11 @@ reasonable.
 
 Finally, we assume that there are no factors besides closeness in opinion that affect
 the choice of proxy.
-For example, we assume a voter would rather choose a proxy for a specific topic who
-closely aligns with their opinion on that topic but has a different party affiliation
-rather than choose a proxy who has the same party affiliation but a different opinion.
-
-\vicki{I wonder how reasonable this assumption is.  It isn't likely they would pick someone of a different party.}
+This is differs from the actual system presently used, which includes restrictions
+such as a proxy can only serve ten voters.\cite{CERP2020}
+However, we feel removing restrictions such as these leads to a more interesting
+discussion, since it allows the use of different voting mechanisms and more extreme
+cases.
 
 As part of this study, we employ a model developed by \etal{Cohensius} in
 their 2017 article~\cite{Cohensius2017}.
