Swapped metric space example

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -76,10 +76,9 @@ Modeling voters' preferences in such a way allows for continuous preferences ins
 discrete or binary opinions other models might emphasize.
 This is beneficial, as it allows for a more realistic representation of voters'
 opinions, since it is unlikely that voters' opinions are perfectly binary.
-For example, it is likely that some members are very passionate for the
-use of proxy voting in the House, while others are passionately against it, and yet
-others remain ambivalent or less-passionately for or against.
-\vicki{ Better to pick another topic as feeling passionate about proxy voting in the discussion of proxy voting adds unnecessary confusion.}
+For example, it is likely that some members are very passionately in favor of higher
+spending on education, while others are passionately against it, and yet others
+remain ambivalent or less-passionately for or against.
 This works perfectly with the metric space model, as it allows for the passionate
 opinions to be at opposite extremes of the metric space, while the less-passionate
 opinions are closer to the center.
