Addressed multi-faceted topics

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -112,9 +112,10 @@ opinions are closer to the center.
     \label{fig:system-metric-space}
 \end{figure}
 
-This model also naturally extends to two- or higher-dimensional spaces, such as
-the opinions of a congress member on multiple topics.
-\vicki{I would think it is better explained as multi-faceted topics.  For example, in seeking a solution to migration how do they feel about border restrictions, finding root causes of migration, economic impact.}
+This model also naturally extends to two- or higher-dimensional spaces.
+These would include more complex and multi-faceted topics, such as migration, which
+would include subtopics such as border restrictions and economic impact, or where to
+delegate fund in the United States Budget.
 However, as previously mentioned, we will only consider the idealistic
 situation where a congress member can choose their proxy for each topic individually.
 The model also allows for votes on topics that are not binary, such as setting the
