Addressed binary and discrete votes

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -119,10 +119,12 @@ delegate fund in the United States Budget.
 However, as previously mentioned, we will only consider the idealistic
 situation where a congress member can choose their proxy for each topic individually.
 The model also allows for votes on topics that are not binary, such as setting the
-budget for the year:
-instead of simply voting yes or no on some pre-chosen budget, the output of the system
-can serve as the budget.
-\vicki{For budget, any amount would be possible, but for other topics a complete range wouldn't be possible.  If you are voting on term limits, it really is a  yes/no decision.}
+budget for the year: instead of simply voting yes or no on some pre-chosen budget,
+the output of the system can serve as the budget.
+Discrete and binary issues can be supported too, though there are multiple ways of
+interpreting the output of the model.
+For example, one could round the output to the nearest valid choice, such as a 1 or a
+0 for binary issues.
 
 % Explain what Cohensius did
 %   - Strategic participation
