Cleaned up comments

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -150,7 +150,7 @@ also exists in~\systemspace.
 This study employs the use of several common voting mechanisms and adapts them to the
 proxy voting system.
 What these mechanisms are and how they operate will be described in the full thesis.
-% in~\autoref{subsec:voting-mechanisms}.
+% in~\autoref{subsec:voting-mechanisms}.  % TODO: Uncomment for thesis
 
 This paper will explore how proxy voting affects the vote and under what
 circumstances it can be used by the House without changing the result.
@@ -210,7 +210,7 @@ When operating under the Congress resolution, system welfare can also be enhance
 through proxy voting by allowing ill members to quarantine and ensure the health
 of other agents.
 As will be discussed in the results section of the thesis,
-% \autoref{ch:results},
+% \autoref{ch:results},  % TODO: Uncomment for thesis
 this additional system welfare comes at
 the cost of some system accuracy in terms of the actual preferences of the voters
 since not all information can be restored.
@@ -221,7 +221,6 @@ This is known as \textit{liquid democracy}, which has its own challenges and
 advantages.
 However, simple proxy voting, where proxies cannot transfer their voting power,
 is sufficient for the research performed in this paper.
-% TODO: Rewrite here and below
 
 
 \section{Related Work}\label{sec:related-work}
