Removed mention of not remaining educated

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -177,15 +177,12 @@ Proxy voting has a number of advantages over direct voting.
 The most obvious advantage is that it allows inactive voters to reduce the work
 required of them by choosing a proxy to perform the work of voting for them.
 Naturally, this is extremely useful when the cost of voting is high, such as
-when remaining educated on a topic is difficult or
-time-consuming~\cite{Mueller1972}, uncomfortable work such as standing in
-long queues is required, or other frustrating or costly obstacles must be overcome
-\vicki{In the house, we aren't trying to save them work in becoming knowledgeable.
-I don't think they would like that connotation.  "I was too lazy to become informed so I gave my proxy to XXX."  Emphasize legimate reasons for needing a proxy:  illness, attend conference, spend time with sick relatives }
-For our purposes it is likely undesirable that the agents, being members of Congress,
-do not pay the cost of remaining educated, but proxy voting can still be beneficial
-to the agents because it would allow them to prevent the spread of disease or avoid
-whatever other emergency triggered the use of proxy voting.
+when one is ill or fears they may become ill, or when a member's time can be spent
+more efficiently without being physically present for a vote like when attending a
+conference or engaging in active research in some location outside Washington~D.C.
+This is, of course, directly applicable to the House of Representatives, since proxy
+voting would allow them to prevent the spread of disease or avoid whatever other
+emergency triggered the use of proxy voting.
 
 In these cases, proxy voting allows voters to skip incurring the costs while
 still having their voice heard by allowing a proxy to perform the work once on
