Added assumption about abstention

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -59,6 +59,13 @@ it is often not particularly difficult to gauge the opinion of others, especiall
 those with whom an individual often associates, and so we believe this assumption is
 reasonable.
 
+Third, we assume that abstention is not allowed.
+In other words, all agents must vote either themselves or by proxy.
+This is reasonable because all individuals will have some form of opinion, even if
+that opinion is completely neutral.
+Such an opinion is handled by the model this study employs, which will be discussed
+later.
+
 Finally, we assume that there are no factors besides closeness in opinion that affect
 the choice of proxy.
 This is differs from the actual system presently used, which includes restrictions
