Clarified what inactive means

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -208,8 +208,7 @@ is reintroduced into the system.
 Naturally, in terms of system accuracy the ideal situation is when all voters
 participate.
 However, system welfare can be enhanced on an individual level by allowing agents
-who want to be inactive to become inactive.
-\vicki{be clear you are talking about proxy voting.  Abstaining is another way of being inactive.}
+who want to be inactive through the use of a proxy to delegate their vote.
 When operating under the Congress resolution, system welfare can also be enhanced
 through proxy voting by allowing ill members to quarantine and ensure the health
 of other agents.
