--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -227,18 +227,18 @@ is sufficient for the research performed in this paper.
 
 
 \section{Related Work}\label{sec:related-work}
-James Miller~\cite{Miller1969} proposed using proxy voting as a more direct
-method of democracy rather than representative democracy.
+James Miller~\cite{Miller1969} proposed using proxy voting as a more direct method of
+democracy rather than representative democracy.
 His work focuses on reworking the current House and Senate systems entirely by using a
 more-directly involved populace, but his ideas can still be relevant under the current
 system.
 In particular, he introduces the idea we call \textit{expert proxies},
 those being individuals who would `vote as [the inactive voter] would if only
 [the inactive voter] had the time and knowledge to participate
-directly'~\cite[para.~1.3]{Miller1969}.
+directly'~\cite{Miller1969}.
 In other words, these are well-studied proxies who are familiar with the topic at hand.
 Additionally, he states, `a representative should be an expert, or at least
-competent, in each field [on which they are voting]'~\cite[para.~2.7]{Miller1969}.
+competent, in each field [on which they are voting]'~\cite{Miller1969}.
 Whereas the past 25 Congresses have seen anywhere from 10 to over 25 thousand issues
 over 2 years (though ultimately only around 10\% are actually
 discussed)~\cite{GovTrack2022}, it would be nearly impossible for any individual
@@ -249,8 +249,8 @@ possible the resolution could be expanded to exploit this idea.
 \vicki{This is a valid reason for proxy voting, but it isn't the reasons we are talking about here.}
 
 However, proxy voting is not without its flaws.
-\etal{Kling} investigated a weakness in liquid democracy dubbed `super voters'
-~\cite[para.~1.3]{Kling2015}, which are proxies that receive an extremely large
+\etal{Kling} investigated a weakness in liquid democracy dubbed
+`super voters'~\cite{Kling2015}, which are proxies that receive an extremely large 
 amount of power, while others gain very little.
 While they determined these proxies tend to use their power wisely, possible to avoid
 estranging those voters who delegate their power to the proxy, there can be
