Reworded "give proxy voting its best chance

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -45,8 +45,8 @@ This is not currently the case for the House of Representatives, which requires
 a proxy to be chosen by letter and so would be difficult to change as different
 topics are discussed~\cite{Congress.gov2020}.
 However, since it would be fairly simple to implement a new process that allows
-per-topic proxies, and to give proxy voting its best chance we believe this assumption
-is reasonable.
+per-topic proxies, and since many complex topics can be reduced to a set of related
+subtopics, we believe this assumption is reasonable.
 Additionally, whereas currently the proxies are not general proxies and must vote as
 per specific instructions provided by the delegating
 voter~\cite{CERP2020, Congress.gov2020}, this assumption is not too far off of how
@@ -250,7 +250,7 @@ possible the resolution could be expanded to exploit this idea.
 
 However, proxy voting is not without its flaws.
 \etal{Kling} investigated a weakness in liquid democracy dubbed
-`super voters'~\cite{Kling2015}, which are proxies that receive an extremely large 
+`super voters'~\cite{Kling2015}, which are proxies that receive an extremely large
 amount of power, while others gain very little.
 While they determined these proxies tend to use their power wisely, possible to avoid
 estranging those voters who delegate their power to the proxy, there can be
