--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -9,11 +9,12 @@
 
 On May 13th, 2020, the 116th United States Congress introduced a resolution
 to permit the use of proxy voting during emergencies for members of the House of
-Representatives~\cite{Congress.gov2020}.
+Representatives~\cite{Congress.gov2020}, which would allow members to participate in
+proceedings remotely while still having someone physically present to submit the
+member's vote on their behalf.
 This resolution was passed on May 15th, 2020, and as indicated by proxy designation
 letters sent to the Clerk of the House of Representatives~\cite{Clerk.House.gov2022},
 was put to use as soon as five days later.
-\vicki{Would be good to clarify why they can't just vote remotely.}
 The hope behind the resolution was to allow the House of Representatives
 to vote continue operating while still allowing members to quarantine and
 prevent the spread of COVID-19~\cite{Congress.gov2020}.
