Changed some phrasing

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -320,7 +320,7 @@ mechanisms minimize this error, is precisely what this paper will explore.
 
 
 \section{Contribution}\label{sec:contribution}
-This study aims to explore the use of proxy voting for Congress.
+This study aims to explore the use of proxy voting in the House of Representatives.
 We examine how much of an effect in terms of error proxy voting has on the outcome
 of a vote under a number of distributions of opinions, as well as with various
 numbers of inactive agents.
