Renamed contribution section

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -319,7 +319,8 @@ mechanisms minimize this error, is precisely what this paper will explore.
 \end{figure}
 
 
-\section{Contribution}\label{sec:contribution}
+\section{Proposed Work}\label{sec:contribution}
+% \section{Contribution}\label{sec:contribution}
 This study aims to explore the use of proxy voting in the House of Representatives.
 We examine how much of an effect in terms of error proxy voting has on the outcome
 of a vote under a number of distributions of opinions, as well as with various
