Previous Work =>  Related Work

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -227,7 +227,7 @@ However, simple proxy voting, where proxies cannot transfer their voting power,
 is sufficient for the research performed in this paper.
 
 
-\section{Related Work}\label{sec:related-work}
+\section{Previous Work}\label{sec:previous-work}
 James Miller~\cite{Miller1969} proposed using proxy voting as a more direct method of
 democracy rather than representative democracy.
 His work focuses on reworking the current House and Senate systems entirely by using a
