Fixed overfull hbox warning

--- a/usuthesis.cls
+++ b/usuthesis.cls
@@ -564,6 +564,7 @@
         \ \\  % empty line to create required triple space
         Major Professor: {\Zmajorprof}\\
         Department: {\Zdepartmentname}\\
+        \vspace{\baselineskip}
     \end{singlespace}
     \begin{doublespace}
 }
