Fixed hyperref "Suppressing link with empty target"

--- a/usuthesis.cls
+++ b/usuthesis.cls
@@ -573,7 +573,7 @@
     \end{doublespace}
     % place page count at the end of the abstract
     \par \bigskip
-    \hfill (\ref{totalpageno} pages)
+    \hfill (\ref*{totalpageno} pages)
 }
 %}}}
 
