Swapped to Proposal format

--- a/thesis.tex
+++ b/thesis.tex
@@ -42,8 +42,9 @@
 %\documentclass[cee,msthesis]{usuthesis}
 %\documentclass[cee,dissertation]{usuthesis}
 
-\documentclass[cs,msthesis]{usuthesis}
-
+% TODO: Swap these two once I start writing the thesis
+% \documentclass[cs,msthesis]{usuthesis}
+\documentclass[cs,proposal]{usuthesis}
 
 %{{{ Packages
 \usepackage{amssymb}           % add ams symbols stuff
